opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_conv_func"
bug-reports: "https://github.com/janestreet/ppx_conv_func/issues"
dev-repo: "https://github.com/janestreet/ppx_conv_func.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ppx_conv_func" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder"
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "ppx_type_conv"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Deprecated

Part of the Jane Street's PPX rewriters collection.
"
