opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_conv_func"
bug-reports: "https://github.com/janestreet/ppx_conv_func/issues"
dev-repo: "git+https://github.com/janestreet/ppx_conv_func.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_conv_func/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "base"
  "dune"   {>= "2.0.0"}
  "ppxlib" {>= "0.28.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Deprecated"
description: "
Part of the Jane Street's PPX rewriters collection.
"
